care/force-app/main/default/objects/Vetting__c/Vetting__c.object-meta.xml
<CustomObject>
    <description>Vetting</description>
    <label>Vetting</label>
    <nameField>
        <label>Vetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vettings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>