care/force-app/main/default/objects/Vetting__c/fields/Audit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Audit_Comments__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Enter comments related to the audit</inlineHelpText>
    <label>Audit Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>