care/force-app/main/default/objects/Vetting__c/fields/Audit_Report_Verified_and_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Audit_Report_Verified_and_Uploaded__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Date Audit Report verified and uploaded to SF</inlineHelpText>
    <label>Audit Report Verified and Uploaded</label>
    <type>Date</type>
</CustomField>