care/force-app/main/default/objects/Vetting__c/fields/Audit_Results__c.field-meta.xml
<CustomField>
    <fullName>Audit_Results__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Enter the audit results</inlineHelpText>
    <label>Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>