care/force-app/main/default/objects/Vetting__c/fields/BBB_Link__c.field-meta.xml
<CustomField>
    <fullName>BBB_Link__c</fullName>
    <label>BBB Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>