care/force-app/main/default/objects/Vetting__c/fields/BBB_Rating__c.field-meta.xml
<CustomField>
    <fullName>BBB_Rating__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>BBB Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A+</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>A-</fullName>
            </value>
            <value>
                <fullName>B+</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>B-</fullName>
            </value>
            <value>
                <fullName>C+</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C-</fullName>
            </value>
            <value>
                <fullName>D+ or below</fullName>
            </value>
            <value>
                <fullName>Not Rated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>