care/force-app/main/default/objects/Vetting__c/fields/BGC_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>BGC_Vendor_Name__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Name of Background Check Vendor</inlineHelpText>
    <label>BGC Vendor Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>