care/force-app/main/default/objects/Vetting__c/fields/BGC_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>BGC_Verified_Date__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Date background check was verified</inlineHelpText>
    <label>BGC Verified Date</label>
    <type>Date</type>
</CustomField>