care/force-app/main/default/objects/Vetting__c/fields/BUC_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>BUC_Center_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Center Name</description>
    <inlineHelpText>Center Name</inlineHelpText>
    <label>Business Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>BUC Network Agency, BUC Network Center, BUC Network Agency, Business Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vettings</relationshipLabel>
    <relationshipName>Vettings</relationshipName>
    <type>Lookup</type>
</CustomField>