care/force-app/main/default/objects/Vetting__c/fields/Business_Abuse_and_Neglect__c.field-meta.xml
<CustomField>
    <fullName>Business_Abuse_and_Neglect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when there is a hit</description>
    <inlineHelpText>When there is a &quot;Hit&quot; click on the Checkbox</inlineHelpText>
    <label>Business: Abuse and Neglect</label>
    <type>Checkbox</type>
</CustomField>