care/force-app/main/default/objects/Vetting__c/fields/Business_Arrest__c.field-meta.xml
<CustomField>
    <fullName>Business_Arrest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When there is a &quot;Hit&quot; click on the Checkbox</inlineHelpText>
    <label>Business: Arrest</label>
    <type>Checkbox</type>
</CustomField>