care/force-app/main/default/objects/Vetting__c/fields/Business_Facebook_Link__c.field-meta.xml
<CustomField>
    <fullName>Business_Facebook_Link__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>Business: Facebook Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>