care/force-app/main/default/objects/Vetting__c/fields/Business_Fraud__c.field-meta.xml
<CustomField>
    <fullName>Business_Fraud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business: Fraud</label>
    <type>Checkbox</type>
</CustomField>