care/force-app/main/default/objects/Vetting__c/fields/Business_Google_Alert_Set__c.field-meta.xml
<CustomField>
    <fullName>Business_Google_Alert_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>Business: Google Alert Set</label>
    <type>Checkbox</type>
</CustomField>