care/force-app/main/default/objects/Vetting__c/fields/Business_Lawsuit_and_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Business_Lawsuit_and_Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFORCE-2848
Modify Vetting Custom Object
SFORCE-3477 - Modified field name</description>
    <inlineHelpText>When there is a &quot;Hit&quot; click on the Checkbox</inlineHelpText>
    <label>Business: Lawsuit and Settlement</label>
    <type>Checkbox</type>
</CustomField>