care/force-app/main/default/objects/Vetting__c/fields/Business_Lawsuit_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Business_Lawsuit_Settlement__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/search?q=&apos;+ Business_Name__c +&apos; Lawsuit and Settlement&apos;, Business_Name__c+&apos; Lawsuit and Settlement&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Lawsuit &amp; Settlement</label>
    <type>Text</type>
</CustomField>