care/force-app/main/default/objects/Vetting__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>Business Name:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>