care/force-app/main/default/objects/Vetting__c/fields/Business_Name_Abuse_Neglect__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_Abuse_Neglect__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/search?q=&apos;+ Business_Name__c +&apos; Abuse and Neglect&apos;, Business_Name__c+&apos; Abuse and Neglect&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Name Abuse &amp; Neglect</label>
    <type>Text</type>
</CustomField>