care/force-app/main/default/objects/Vetting__c/fields/Business_Name_Arrest__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_Arrest__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/search?q=&apos;+ Business_Name__c +&apos; Arrest&apos;, Business_Name__c+&apos; Arrest&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Name Arrest</label>
    <type>Text</type>
</CustomField>