care/force-app/main/default/objects/Vetting__c/fields/Business_Name_Fraud__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_Fraud__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/search?q=&apos;+ Business_Name__c +&apos; Fraud&apos;, Business_Name__c+&apos; Fraud&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Name Fraud</label>
    <type>Text</type>
</CustomField>