care/force-app/main/default/objects/Vetting__c/fields/Business_Name_Search__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_Search__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/search?q=&apos;+Business_Name__c, Business_Name__c, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Name Search</label>
    <type>Text</type>
</CustomField>