care/force-app/main/default/objects/Vetting__c/fields/Business_Name_Sex_Offender__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_Sex_Offender__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/search?q=&apos;+ Business_Name__c +&apos; Sex Offender&apos;, Business_Name__c+&apos; Sex Offender&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Name Sex Offender</label>
    <type>Text</type>
</CustomField>