care/force-app/main/default/objects/Vetting__c/fields/Business_NSOPW_Check__c.field-meta.xml
<CustomField>
    <fullName>Business_NSOPW_Check__c</fullName>
    <description>SFORCE-3477 - Add new field</description>
    <label>Business: NSOPW Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hit</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>