care/force-app/main/default/objects/Vetting__c/fields/Business_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Business_Stakeholder__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>Business Stakeholder:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>