care/force-app/main/default/objects/Vetting__c/fields/Caregiver_Training_to_Employees__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_Training_to_Employees__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Does the agency offer caregiver training opportunities to employees?</inlineHelpText>
    <label>Caregiver Training to Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>