care/force-app/main/default/objects/Vetting__c/fields/CG_Audit_Date_Recorded_in_CSR__c.field-meta.xml
<CustomField>
    <fullName>CG_Audit_Date_Recorded_in_CSR__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Date the Audit was recorded in CSR</inlineHelpText>
    <label>CG Audit Date Recorded in CSR</label>
    <type>Date</type>
</CustomField>