care/force-app/main/default/objects/Vetting__c/fields/CG_Verification_Audit_Report_Received__c.field-meta.xml
<CustomField>
    <fullName>CG_Verification_Audit_Report_Received__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Enter the date the Caregiver Verification Audit Report was received from agency</inlineHelpText>
    <label>CG Verification Audit Report Received</label>
    <type>Date</type>
</CustomField>