care/force-app/main/default/objects/Vetting__c/fields/CG_Verification_Date_Recorded_in_CSR__c.field-meta.xml
<CustomField>
    <fullName>CG_Verification_Date_Recorded_in_CSR__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Enter the date the Caregivers were verified and documented in CSR</inlineHelpText>
    <label>CG Verification Date Recorded in CSR</label>
    <type>Date</type>
</CustomField>