care/force-app/main/default/objects/Vetting__c/fields/City_State_Business_Certificate__c.field-meta.xml
<CustomField>
    <fullName>City_State_Business_Certificate__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Does the agency have a City/State Business Certificate?</inlineHelpText>
    <label>City/State Business Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>