care/force-app/main/default/objects/Vetting__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Sforce 2497 -- Establish BUC Agency Audit/Verification Process and Reporting for Best Buy</description>
    <inlineHelpText>Enter the date the audit was completed</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>