care/force-app/main/default/objects/Vetting__c/fields/Date_Audit_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Audit_Received__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Date audit was received from the agency</inlineHelpText>
    <label>Date Audit Received</label>
    <type>Date</type>
</CustomField>