care/force-app/main/default/objects/Vetting__c/fields/Date_Audit_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Audit_Sent__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Date audit was sent to the agency</inlineHelpText>
    <label>Date Audit Sent</label>
    <type>Date</type>
</CustomField>