care/force-app/main/default/objects/Vetting__c/fields/Date_Current_FA_CPR_Certs_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Current_FA_CPR_Certs_Received__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Date current First Aid/CPR certifications were uploaded to SF</inlineHelpText>
    <label>Date Current FA/CPR Certs Received</label>
    <type>Date</type>
</CustomField>