care/force-app/main/default/objects/Vetting__c/fields/Date_of_Next_Annual_Audit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Annual_Audit__c</fullName>
    <description>Sforce 2497</description>
    <formula>ADDMONTHS( Date_Audit_Sent__c , 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date of Next Audit</inlineHelpText>
    <label>Date of Next Annual Audit</label>
    <type>Date</type>
</CustomField>