care/force-app/main/default/objects/Vetting__c/fields/FA_CPR_Certifications_Verified_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>FA_CPR_Certifications_Verified_Uploaded__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Date First Aid/CPR Certifications were uploaded</inlineHelpText>
    <label>FA/CPR Certifications Verified&amp;Uploaded</label>
    <type>Date</type>
</CustomField>