care/force-app/main/default/objects/Vetting__c/fields/Facebook_Check__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Check__c</fullName>
    <label>Facebook Check</label>
    <type>Date</type>
</CustomField>