care/force-app/main/default/objects/Vetting__c/fields/Facebook_Link__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Link__c</fullName>
    <label>Facebook Link</label>
    <type>TextArea</type>
</CustomField>