care/force-app/main/default/objects/Vetting__c/fields/Inspection_PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>Inspection_PDF_URL__c</fullName>
    <label>Inspection PDF URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>