care/force-app/main/default/objects/Vetting__c/fields/Inspection_URL__c.field-meta.xml
<CustomField>
    <fullName>Inspection_URL__c</fullName>
    <label>Inspection URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>