care/force-app/main/default/objects/Vetting__c/fields/License_Status_Checked__c.field-meta.xml
<CustomField>
    <fullName>License_Status_Checked__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>License Status Checked</label>
    <type>Date</type>
</CustomField>