care/force-app/main/default/objects/Vetting__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Health Agency</fullName>
            </value>
            <value>
                <fullName>Articles of Incorporation/LLC</fullName>
            </value>
            <value>
                <fullName>Business License – State/Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>