care/force-app/main/default/objects/Vetting__c/fields/Licensing_Link__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Link__c</fullName>
    <label>Licensing Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>