care/force-app/main/default/objects/Vetting__c/fields/Next_Caregiver_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Caregiver_Verification_Date__c</fullName>
    <formula>ADDMONTHS( CG_Verification_Audit_Report_Sent__c , 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Caregiver Verification Date</label>
    <type>Date</type>
</CustomField>