care/force-app/main/default/objects/Vetting__c/fields/Online_Reviews_Checked__c.field-meta.xml
<CustomField>
    <fullName>Online_Reviews_Checked__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>Online Reviews Checked</label>
    <type>Date</type>
</CustomField>