care/force-app/main/default/objects/Vetting__c/fields/Online_Reviews_Summary__c.field-meta.xml
<CustomField>
    <fullName>Online_Reviews_Summary__c</fullName>
    <label>Online Reviews Summary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>