care/force-app/main/default/objects/Vetting__c/fields/ORC_Links__c.field-meta.xml
<CustomField>
    <fullName>ORC_Links__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>ORC Links</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>