care/force-app/main/default/objects/Vetting__c/fields/OSV_Completed__c.field-meta.xml
<CustomField>
    <fullName>OSV_Completed__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>OSV Completed</label>
    <type>Date</type>
</CustomField>