care/force-app/main/default/objects/Vetting__c/fields/OSV_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>OSV_Completed_By__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>OSV Completed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>