care/force-app/main/default/objects/Vetting__c/fields/OSV_Status__c.field-meta.xml
<CustomField>
    <fullName>OSV_Status__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>OSV Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>