care/force-app/main/default/objects/Vetting__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <description>SFORCE-2883
Dev - Add Overall Score field to BUC Network Vetting and Vetting Related List</description>
    <inlineHelpText>Update the Overall Score on the Account and enter the updated value here.</inlineHelpText>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>