care/force-app/main/default/objects/Vetting__c/fields/Owner_Abuse_Neglect__c.field-meta.xml
<CustomField>
    <fullName>Owner_Abuse_Neglect__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/search?q=&apos;+Business_Stakeholder__c+&apos; Abuse and Neglect&apos;, Business_Stakeholder__c+&apos; Abuse and Neglect&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Abuse &amp; Neglect</label>
    <type>Text</type>
</CustomField>