care/force-app/main/default/objects/Vetting__c/fields/Owner_Arrest__c.field-meta.xml
<CustomField>
    <fullName>Owner_Arrest__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/search?q=&apos;+Business_Stakeholder__c+&apos; Arrest&apos;, Business_Stakeholder__c+&apos; Arrest&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Arrest</label>
    <type>Text</type>
</CustomField>