care/force-app/main/default/objects/Vetting__c/fields/Owner_Lawsuit_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Owner_Lawsuit_Settlement__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/search?q=&apos;+ Business_Stakeholder__c +&apos; Lawsuit and Settlement&apos;, Business_Stakeholder__c+&apos; Lawsuit and Settlement&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Lawsuit &amp; Settlement</label>
    <type>Text</type>
</CustomField>