care/force-app/main/default/objects/Vetting__c/fields/Owner_Sex_Offender__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sex_Offender__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/search?q=&apos;+ Business_Stakeholder__c +&apos; Sex Offender&apos;, Business_Stakeholder__c+&apos; Sex Offender&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Sex Offender</label>
    <type>Text</type>
</CustomField>