care/force-app/main/default/objects/Vetting__c/fields/Re_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Launch_Date__c</fullName>
    <description>Date Field Used by US BUC Team for US BUC Network Vetting record type</description>
    <inlineHelpText>Date field used by US BUC Team</inlineHelpText>
    <label>Re-Launch Date</label>
    <type>Date</type>
</CustomField>