care/force-app/main/default/objects/Vetting__c/fields/Reference_Check_Verified_and_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Reference_Check_Verified_and_Uploaded__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Date Reference Check Verification sheet uploaded to SF</inlineHelpText>
    <label>Reference Check Verified and Uploaded</label>
    <type>Date</type>
</CustomField>