care/force-app/main/default/objects/Vetting__c/fields/Risk_Inform_Check__c.field-meta.xml
<CustomField>
    <fullName>Risk_Inform_Check__c</fullName>
    <label>Risk Inform Check</label>
    <type>Date</type>
</CustomField>