care/force-app/main/default/objects/Vetting__c/fields/Risk_Inform_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Inform_Score__c</fullName>
    <label>Risk Inform Score</label>
    <length>20</length>
    <type>Text</type>
</CustomField>