care/force-app/main/default/objects/Vetting__c/fields/SeniorCareCompany__c.field-meta.xml
<CustomField>
    <fullName>SeniorCareCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Care Company</label>
    <referenceTo>Senior_Care_Companies__c</referenceTo>
    <relationshipLabel>Vettings</relationshipLabel>
    <relationshipName>Vettings</relationshipName>
    <type>Lookup</type>
</CustomField>