care/force-app/main/default/objects/Vetting__c/fields/Stakeholder_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Abuse__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>xx_Stakeholder: Abuse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hit</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>