care/force-app/main/default/objects/Vetting__c/fields/Stakeholder_Abuse_and_Neglect__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Abuse_and_Neglect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFORCE-2848
Modify Vetting Custom Object
SFORCE-3477 - Modified field name</description>
    <inlineHelpText>When there is a &quot;Hit&quot; click on the Checkbox</inlineHelpText>
    <label>Stakeholder: Abuse and Neglect</label>
    <type>Checkbox</type>
</CustomField>